add a portal style login and admin configuration

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -16,7 +16,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,50i,700,700i');
 
 $global-font-size: 100%;
-$global-width: rem-calc(1200);
+$global-width: 1200px;
 $global-lineheight: 1.5;
 $body-background: color("shades", "white");
 $body-font-color: color("shades", "black");
