--- a/scss/admin.scss
+++ b/scss/admin.scss
@@ -930,3 +930,40 @@ details.views-display-column.form-wrapper {
     }
   }
 }
+
+// user login / password 
+
+.login-header {
+  .block-page-title-block {
+    h1 {
+      font-weight: 200;
+    }
+  }
+  .block-local-tasks-block {
+    nav.tabs {
+      li {
+        a {
+          color: color("grey", "base");
+          &:hover {
+            color: color("grey", "darken-1");
+          }
+          &.active {
+            color: color("red", "lighten-1");
+          }
+        }
+        &.indicator {
+          background: color("red", "lighten-1");
+        }
+      }
+    }
+  }
+  a.site-logo {
+    img {
+      max-width: 125px;
+    }
+  }
+}
+
+body.material_login {
+  background: color("grey", "lighten-4")
+}
