--- a/scss/admin.scss
+++ b/scss/admin.scss
@@ -957,6 +957,9 @@ details.views-display-column.form-wrapper {
       }
     }
   }
+}
+
+#block-material-admin-sitebranding {
   a.site-logo {
     img {
       max-width: 125px;
