--- a/templates/form/form-element.html.twig
+++ b/templates/form/form-element.html.twig
@@ -94,7 +94,7 @@
   {% endif %}
   {% if description_display in ['after', 'invisible'] and description.content %}
     <div{{ description.attributes.addClass(description_classes) }}>
-         <a class="tooltipped" data-position="bottom" data-delay="50" data-html="true" data-tooltip="{{ description.content|e('html')|convert_encoding('UTF-8', 'HTML-ENTITIES') }}">More info <i class="fa fa-question-circle" aria-hidden="true"></i></a>
+         <a class="tooltip-item" title="{{ description.content|e('html')|convert_encoding('UTF-8', 'HTML-ENTITIES') }}">More info <i class="fa fa-question-circle" aria-hidden="true"></i></a>
     </div>
   {% endif %}
 </div>
