--- a/scss/components/_breadcrumbs.scss
+++ b/scss/components/_breadcrumbs.scss
@@ -56,7 +56,7 @@
         line-height: 16px;
         color: color($primary, 'lighten-4');
         font-size: 23px;
-        content: 'keyboard_arrow_right';
+        content: 'keyboard_arrow_right' #{"/*rtl:'keyboard_arrow_left'*/"};
 
         -webkit-font-smoothing: antialiased;
       }
